--- a/calico-cloud/networking/egress/egress-gateway-maintenance.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-maintenance.mdx
@@ -46,7 +46,7 @@ Before we can observe these annotations, we must first configure a _termination 
 
 #### Add a termination grace period to egress gateway replicas
 
-In order to widen our maintenance window, we must adjust the `terminationGracePeriodSeconds` field on our egress gateway pods. The amount of time we allot for the termination grace period will dictate how much time a dependent workload has to prepare for a gateway going down.
+To widen our maintenance window, we can adjust the `terminationGracePeriodSeconds` field on our egress gateway pods. The amount of time we set for the termination grace period will dictate how much time a dependent workload has to prepare for a gateway going down.
 
 Let's add a termination grace period of 60 seconds to all pods in our egress gateway deploymment, so that our egress-dependent workloads have a wider window to react:
 
@@ -294,7 +294,7 @@ kubectl patch deploy annotation-aware-workloads --type=merge -p \
 
 :::
 
-Once our patched sample deployment has been fully rolled out, each of our application pods should now depend on at-most 1 egress gateway replica. Lets bring down another egress gateway pod and monitor our application logs:
+After our patched sample deployment has been fully rolled out, each application pod should now depend on at most one egress gateway replica. Let's bring down another egress gateway pod and monitor our application logs:
 
 ```sh
 $  begin the termination of an egress gateway pod
