--- a/calico-enterprise/threat/security-event-management.mdx
+++ b/calico-enterprise/threat/security-event-management.mdx
@@ -31,7 +31,7 @@ Security events indicate that a threat actor may be present in your Kubernetes c
 
 **Limitations**
 
-- Only WAF basic security events 
+- Only WAF basic security events. Over time, the dashboard will contain a full range of {{prodname}} security events.
 - All users can view and edit the page
 
 ## Security events dashboard
@@ -40,42 +40,40 @@ In Manager UI, go to **Threat defense**, **Security Events**.
 
 ### UI help
 
-**Event column**
-
-In this release, only WAF basic events are visible. Over time, the dashboard will contain a full range of {{prodname}} security events.
-
-**Severity column**
-
-{{prodname}} calculates severity (Critical, High, Medium, Low) using a combination of NIST CVSS 3.0 and MITRE IDs.
-
-**MITRE column**
-
-Multiple MITRE IDs may be associated with a security event.
 
 **Event details page**
 
-Provides actions to remediate the detection and stop the attack from progressing.
+Provides actions to remediate the detection and stop the attack from progressing. For example:
 
-![waf-security](/img/calico-enterprise/waf-security-event.png)
+![waf-security](/img/calico-enterprise/waf-security-events-latest.png)
 
-**Attack vectors** include:
+**Severity**
+
+{{prodname}} calculates severity (Critical, High, Medium, Low) using a combination of NIST CVSS 3.0 and MITRE IDs.
+
+**MITRE IDs**
+
+Multiple MITRE IDs may be associated with a security event.
+
+**Attack Vector**
 - Network
 - Process
 - File
 
-**MITRE tactic** based on the [MITRE tactics](https://attack.mitre.org/tactics/enterprise/) includes a specific path, method, or scenario that can compromise cluster security. Valid entries:
+**MITRE Tactic** (based on the [MITRE tactics](https://attack.mitre.org/tactics/enterprise/)) includes a specific path, method, or scenario that can compromise cluster security. Valid entries:
 
-| Tactic               | Target                                                       | Attack techniques                                            |
-| -------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| Initial access       | [Network](https://attack.mitre.org/tactics/TA0001/)          | Gain an initial foothold within a network using various entry vectors. |
-| Execution            | [Code in local or remove systems](https://attack.mitre.org/tactics/TA0002/) | Control code running on local or remote systems using malicious code. |
-| Impact               | [Systems and data](https://attack.mitre.org/tactics/TA0040/) | Disrupt availability or compromise integrity by manipulating business and operational processes. |
-| Persistence          | [Maintain footholds](https://attack.mitre.org/tactics/TA0003/) | Maintain access to systems across restarts, credential changes, and other interruptions. |
-| Privilege Escalation | [Access permissions](https://attack.mitre.org/tactics/TA0004/) | Access higher-level permissions on a system or network.      |
-| Defense Evasion      | [Avoid detection](https://attack.mitre.org/tactics/TA0005/)  | Masquerade and hide malware to avoid detection to compromise software, data, scripts, and processes. |
-| Discovery            | [Determine your environment](https://attack.mitre.org/tactics/TA0007/) | Gain knowledge about your system and internal network.       |
+| Tactic                                                       | Target                          | Attack techniques                                            |
+| ------------------------------------------------------------ | ------------------------------- | ------------------------------------------------------------ |
+| [Initial access](https://attack.mitre.org/tactics/TA0001/)   | Network                         | Gain an initial foothold within a network using various entry vectors. |
+| [Execution](https://attack.mitre.org/tactics/TA0002/)        | Code in local or remove systems | Control code running on local or remote systems using malicious code. |
+| [Impact](https://attack.mitre.org/tactics/TA0040/)           | Systems and data                | Disrupt availability or compromise integrity by manipulating business and operational processes. |
+| [Persistence](https://attack.mitre.org/tactics/TA0003/)      | Maintain footholds              | Maintain access to systems across restarts, credential changes, and other interruptions. |
+| [Privilege Escalation](https://attack.mitre.org/tactics/TA0004/) | Access permissions              | Access higher-level permissions on a system or network.      |
+| [Defense Evasion](https://attack.mitre.org/tactics/TA0005/)  | Avoid detection                 | Masquerade and hide malware to avoid detection to compromise software, data, scripts, and processes. |
+| [Discovery](https://attack.mitre.org/tactics/TA0007/)        | Determine your environment      | Gain knowledge about your system and internal network.       |
 
-### FAQ
+
+### Frequently asked questions
 
 **How is the recommended remediation determined?**
 
@@ -95,4 +93,4 @@ Security events generated from older managed clusters will not have values for t
 
 **Where can I view security event logs?**
 
-You can view security event alerts in Kibana in the existing `tigera_secure_ee_events` index. 
+In Manager UI, **Logs**, Kibana, in the index, `tigera_secure_ee_events`.
