--- a/calico-enterprise/threat/security-event-management.mdx
+++ b/calico-enterprise/threat/security-event-management.mdx
@@ -85,7 +85,7 @@ No. {{prodname}} security events do not encompass all types of alerts nor all se
 
 **What does dismissing a security event do?**
 
-Dismissing a security event hides it from view. Use the toggle button to show/hide. There is no function to undo a dismissed alert.
+Dismissing a security event hides it from view. Use the toggle button to show/hide. There is no option to undo a dismissed alert.
 
 **Why are some fields in columns blank?**
 
@@ -93,4 +93,4 @@ Security events generated from older managed clusters will not have values for t
 
 **Where can I view security event logs?**
 
-In Manager UI, **Logs**, Kibana, in the index, `tigera_secure_ee_events`.
+Go to: **Logs**, Kibana index, `tigera_secure_ee_events`.
