DOCS-1068-customing-bgp

--- a/calico-enterprise/networking/configuring/custom-bgp-config.mdx
+++ b/calico-enterprise/networking/configuring/custom-bgp-config.mdx
@@ -1,11 +1,17 @@
 ---
+description: Customize your BGP configuration.
 ---
 
-# Custom BGP Configuration
+# Custom BGP configuration
 
 ## Big picture
 
-Use customized BIRD configuration files to enable specialized use-cases.
+Customize BGP configurations for special use-cases.
+
+:::caution
+Customizing BGP configuration templates is not supported by Tigera for production because they are not guaranteed to work when upgrading. However, if you want to use custom templates for POCs and other temporary uses cases, contact your Tigera Support representative for help.
+
+:::
 
 ## Concepts
 
@@ -13,8 +19,6 @@ In {{prodname}}, BGP is handled by [BIRD](https://github.com/projectcalico/bird)
 The BIRD configurations are templated out through [confd](https://github.com/projectcalico/confd).
 You can modify the BIRD configuration to use BIRD features which are not typically exposed using the
 default configuration provided with {{prodname}}.
-
-Customization of BGP templates should be done only with the help of your Tigera Support representative.
 
 ## Before you begin
 
