--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -134,7 +134,7 @@ In Service Graph, go to the service and click the HTTP tab. You will see the fol
 
 #### Threat defense
 
-To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help see, [security-event-management](./security-event-management).
+To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help, see [security-event-management](./security-event-management).
 
 #### Kibana
 
