--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
@@ -21,7 +21,7 @@ One of the best practices for improving the security posture of your Kubernetes 
 
 **Required RBAC**
 
-To enable/disable and use policy recommendations, you must have the **tigera-network-admin** role or permissions to the **update**, **patch**, **get**, **list**, **watch** `projectcalico.org` resources:
+To enable/disable and use policy recommendations, you must have the **tigera-network-admin** role or permissions to **update**, **patch**, **get**, **list**, **watch** `projectcalico.org` resources:
 * tiers
 * policyrecommendationscopes
 * stagednetworkpolicies
@@ -29,6 +29,8 @@ To enable/disable and use policy recommendations, you must have the **tigera-net
 * networkpolicies
 * tier.networkpolicies
 * globalnetworksets
+
+Specifically, you will need access to the `namespace-isolation` tier and to staged and network policies in the `namespace-isolation` tier.
 
 **Recommended**
 
