Use upstream sig-windows ps1 scripts
Use Install-Containerd.ps1 and PrepareNode.ps1 from the
sig-windows-tools repo instead of hosting our own copies.

Remove tmpScriptsURL from variables.js and remove the
scripts/ dir entirerly in Calico OSS. Remove
Install-Containerd.ps1 and PrepareNode.ps1 from the
scripts/ dir in Calico EE.

Add windowsScriptsURL to variables.js pointing to the
sig-windows-tools repo to both OSS and EE.

Perform these changes only on the 'next' versions (i.e.,
non-versioned dirs).

--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -352,8 +352,8 @@ this installation method has [additional requirements](https://kubernetes.io/doc
 To install ContainerD on the Windows node and configure the ContainerD service:
 
 ```powershell
-Invoke-WebRequest {{tmpScriptsURL}}/scripts/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
-c:\Install-Containerd.ps1 -ContainerDVersion 1.6.2 -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
+Invoke-WebRequest {{windowsScriptsURL}}/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
+c:\Install-Containerd.ps1 -ContainerDVersion 1.7.1 -netAdapterName Ethernet -skipHypervisorSupportCheck -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
 ```
 
 If you have an existing {{prodnameWindows}} installation using the manual method, your Windows nodes may have already joined the cluster.
@@ -363,8 +363,8 @@ To join a Windows node to a cluster provisioned with kubeadm:
 - Install kubeadm and kubelet binaries and install the kubelet service
 
 ```powershell
-Invoke-WebRequest {{tmpScriptsURL}}/scripts/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
-c:\PrepareNode.ps1 -KubernetesVersion v1.23.4 -ContainerRuntime ContainerD
+Invoke-WebRequest {{windowsScriptsURL}}/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
+c:\PrepareNode.ps1 -KubernetesVersion v1.26.6
 ```
 
 - Run kubeadm on a control plane host and copy the join command
