--- a/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/archive-storage.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/archive-storage.mdx
@@ -22,6 +22,14 @@ This how-to guide uses the following {{prodname}} features:
 
 - **LogCollector** resource
 
+## Before you begin
+
+**Supported logs for export**
+
+- Syslog - flow, dns, idsevents, audit
+- Amazon S3 - l7, flow, dns, runtime, compliance, audit
+- Splunk - flow, audit, dns
+
 ## How to
 
 <Tabs>
