--- a/calico-enterprise/network-policy/recommendations/learn-about-policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/learn-about-policy-recommendations.mdx
@@ -18,9 +18,9 @@ Because the policy recommendation feature requires traffic between endpoints, th
    kubectl patch felixconfiguration.p default -p '{"spec":{"flowLogsFlushInterval":"10s"}}'
    ```
 
-1. Download the tutorial YAML, creating the necessary resources [`policy-recommendation-deployments.yaml` manifest]({{tutorialFilesURL}}/policy-recommendation-deployments.yaml).
+1. Download the [policy recommendation tutorial deployment]({{tutorialFilesURL}}/policy-recommendation-deployments.yaml) YAML.
 
-1. Use the following command to install the bindings:
+1. Use the following command to create the necessary resources:
 
    ```bash
    kubectl apply -f policy-recommendation-deployments.yaml
@@ -136,7 +136,3 @@ Examine the **Allowed/sec** of each rule in the policy to get a sense of the qua
 ### When policy recommendations are not generated
 
 You may wonder why you are not getting policy recommendations, even though there is traffic between endpoints. This is because policy recommendations are generated only for flows that are not captured by any other policy in your cluster. To see if policy is already enforcing the traffic in question, search for the flow log in question, examine the `policies` field, and verify that no other enforced policy allows or denies traffic for that flow.
-
-### Next step
-
-You are now ready to [enable policy recommendations](policy-recommendations#enable-policy-recommendations) and see flows that can be allowed.
