--- a/calico-enterprise_versioned_docs/version-3.16/compliance/encrypt-cluster-pod-traffic.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/compliance/encrypt-cluster-pod-traffic.mdx
@@ -54,7 +54,7 @@ This how-to guide uses the following {{prodname}} features:
 **Supported encryption**
 
 - Inter-node pod traffic
-- Inter-node, host-network traffic is only encrypted on managed clusters deployed on EKS (AWS CNI) and AKS (Azure CNI)
+- When using the Azure/AWS CNI in AKS/EKS, both pod and host-networked pods will have their traffic encrypted.
 
 **Required**
 
