[EV-3902] Fix typo in Policy Rec notes

--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -145,7 +145,7 @@ kubectl logs -n tigera-policy-recommendation -l k8s-app=tigera-policy-recommenda
 ```
 
 **Notes**:
-This is option is not available on managed clusters if you have implemented the multi-cluster-management feature.
+This option is not available on managed clusters if you have implemented the multi-cluster-management feature.
 
 **Problem**: I’m not seeing policy recommendations on the Policy Recommendations board.
 
