--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.1-release-notes.mdx
@@ -3,6 +3,7 @@
 ### What's new {#whats-new-3.17.1}
 
 #### New policy recommendations engine for namespace isolation
+
 {{prodname}} has added a new policy recommendations engine that automatically generates staged policies for namespace isolation within your cluster. [Policy recommendations](../network-policy/recommendations/policy-recommendations).
 
 #### Destination-based routing for egress gateways
@@ -33,4 +34,5 @@ Or customize the Helm chart using [existing installation steps](../getting-start
 - Dragging tiers to modify their order is currently not working in the UI, though you can still change its order when editing a tier
 - Policy recommendations may generate rules with ports and protocols for intra-namespace traffic. This will be modified in the next patch release to exclude ports and protocols and provide an option to Allow or Pass this traffic.
 - Installing {{prodname}} on OpenShift Container Platform (OCP) 4.13 with the eBPF dataplane is currently not working
+- Switching a cluster with Openshift v4.13 from iptables to eBPF causes the node to crash.
 - Upgrading to {{prodname}} 3.17.1 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
