--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/k3s/quickstart.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/k3s/quickstart.mdx
@@ -44,7 +44,7 @@ For more detail please visit [this link](https://rancher.com/docs/k3s/latest/en/
 
 ### Create a single-node K3s cluster
 
-- Initialize the control plane using the following command.
+- Initialize the control plane using the following command:
 
 ```bash
 curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--flannel-backend=none --cluster-cidr=192.168.0.0/16 --disable-network-policy --disable=traefik" sh -
@@ -52,15 +52,12 @@ curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--fla
 
 :::note
 
-If 192.168.0.0/16 is already in use within your network you must select a different pod network
+- If 192.168.0.0/16 is already in use within your network you must select a different pod network
 CIDR by replacing 192.168.0.0/16 in the above command.
 
-:::
-
-:::note
-
-K3s installer generates `kubeconfig` file in `etc` directory with limited permissions, using `K3S_KUBECONFIG_MODE` environment
+- K3s installer generates `kubeconfig` file in `etc` directory with limited permissions, using `K3S_KUBECONFIG_MODE` environment
 you are assigning necessary permissions to the file and make it accessible for other users.
+
 
 :::
 
@@ -69,7 +66,7 @@ you are assigning necessary permissions to the file and make it accessible for o
    <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-Install the {{prodname}} operator and custom resource definitions.
+1. Install the {{prodname}} operator and custom resource definitions.
 
 ```bash
 kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
@@ -77,11 +74,11 @@ kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 
 :::note
 
-Due to the large size of the CRD bundle, `kubectl apply` might exceed request limits. Instead, use `kubectl create` or `kubectl replace`.
+Due to the large size of the CRD bundle, `kubectl apply` might exceed request limits. Therefore, it is recommended to use `kubectl create` or `kubectl replace`.
 
 :::
 
-Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
+2. Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
 
 ```bash
 kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
@@ -150,7 +147,7 @@ You should see the following output.
 watch kubectl get pods --all-namespaces
 ```
 
-Wait until each pod shows the `STATUS` of `Running`.
+2. Wait until each pod shows the `STATUS` of `Running`.
 
 <Tabs>
 <TabItem label="Operator" value="Operator-2">
@@ -181,9 +178,9 @@ kube-system   coredns-8655855d6-blzl5                    1/1     Running   0    
 </TabItem>
 </Tabs>
 
-1. Press CTRL+C to exit `watch`.
+3. Press CTRL+C to exit `watch`.
 
-2. Confirm that you now have a node in your cluster with the
+4. Confirm that you now have a node in your cluster with the
    following command.
 
 ```bash
