--- a/calico_versioned_docs/version-3.26/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.26/operations/upgrading/kubernetes-upgrade.mdx
@@ -53,6 +53,12 @@ ownership of the helm resources to the new chart location.
    kubectl patch clusterrolebinding tigera-operator tigera-operator --type=merge -p '{"metadata": {"annotations": {"meta.helm.sh/release-namespace": "tigera-operator"}}}'
    ```
 
+1. Apply the {{version}} CRDs:
+
+   ```bash
+   kubectl replace -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   ```
+
 1. Install the helm chart in the `tigera-operator` namespace.
 
    ```
