Ubuntu version update

--- a/calico/getting-started/kubernetes/k3s/quickstart.mdx
+++ b/calico/getting-started/kubernetes/k3s/quickstart.mdx
@@ -31,7 +31,7 @@ The geeky details of what you get:
   - 1CPU
   - 1GB Ram
   - 10GB free disk space
-  - Ubuntu 16.04 (amd64), Ubuntu 18.04 (amd64), Ubuntu 20.04 (amd64)
+  - Ubuntu 18.04 (amd64), Ubuntu 20.04 (amd64)
 
 :::note
 
