--- a/calico-cloud/visibility/elastic/archive-storage.mdx
+++ b/calico-cloud/visibility/elastic/archive-storage.mdx
@@ -27,7 +27,7 @@ This how-to guide uses the following {{prodname}} features:
 **Supported logs for export**
 
 - Syslog - flow, dns, idsevents, audit
-- Amazon S3 - l7, flow, dns, runtime, compliance, audit
+- Amazon S3 - l7, flow, dns, runtime, audit
 - Splunk - flow, audit, dns
 
 ## How to
