--- a/calico-enterprise_versioned_docs/version-3.17/visibility/elastic/archive-storage.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/visibility/elastic/archive-storage.mdx
@@ -27,8 +27,8 @@ This how-to guide uses the following {{prodname}} features:
 **Supported logs for export**
 
 - Syslog - flow, dns, idsevents, audit
-- Amazon S3 - l7, flow, dns, runtime, compliance, audit
 - Splunk - flow, audit, dns
+- Amazon S3 - l7, flow, dns, audit
 
 ## How to
 
