--- a/calico-cloud_versioned_docs/version-3.16/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/image-assurance/understanding-scan-results.mdx
@@ -7,13 +7,13 @@ description: Understand scan results in Manager UI.
 This article provides help using Image Assurance in Manager UI:
 
 - [All Scanned Images dashboard](#all-scanned-images-dashboard)
-  - [Scan settings](#scan-settings)
-  - [Exclude specific vulnerabilities](#exclude-specific-vulnerabilities)
+  - [Scan settings panel](#scan-settings-panel)
+  - [Exclude vulnerabilities from scan results](#exclude-vulnerabilities-from-scan-results)
   - [Export scan results](#export-scan-results)
   - [Troubleshooting](#troubleshooting)
-- [Running images](#running-images-tab)
+- [Running images tab](#running-images-tab)
 
-- [Vulnerability Exceptions dashboard](#vulnerability-exceptions)
+- [Vulnerability exceptions dashboard](#vulnerability-exceptions-dashboard)
 
 ## All Scanned Images dashboard
 
@@ -30,8 +30,6 @@ In this panel, you can:
 - View all scanned images for CVEs and remediate prior to run time
 - Change default scan settings
 - Exclude vulnerabilities from scan results
-
-### Scan results tab
 
 Scan results for Image Assurance is based on the Common Vulnerability Scoring System v3 (CVSS Scores). The default Pass, Warn, and Fail values will work for the majority of {{prodname}} deployments. However, you may need to change the defaults because of security requirements.
 
@@ -74,7 +72,7 @@ If you disable Runtime View, some runtime information for existing images will r
 
 They are used to authenticate the connection to the Image Assurance scanner if you have integrated Image Assurance scanner in your build pipeline.
 
-### Exclude specific vulnerabilities
+### Exclude vulnerabilities from scan results
 
 In some cases, you may want to exclude specific vulnerabilities from your scan results. For example, you may determine that a warning is a false positive because of the way you are using an affected package. By creating a vulnerability exception, you can configure Image Assurance to ignore a CVE for a specific image, all images from the same repo, or for all images.
 
