--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -53,7 +53,7 @@ You simply enable WAF in Manager UI, and determine the services that you want to
 - WAF is not supported for host-networked client pods
 - When selecting and deselecting traffic for WAF, active connections may be disrupted
 - You cannot use the annotation on [LoadBalancer type](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer) services.
-- WAF is incompatible with Egress Gateways
+- WAF is incompatible with egress gateways
 - WAF cannot operate on TLS traffic
 
 :::caution
